--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "dev": "grunt monitor",
+    "build": "grunt release:db --force",
     "test": "grunt travis",
     "precommit": "lint-staged"
   },
@@ -26,28 +27,30 @@
       "git add"
     ]
   },
-  "dependencies": {},
+  "dependencies": {
+    "@babel/core": "^7.10.2"
+  },
   "engine": "node >= 6",
   "devDependencies": {
-    "autoprefixer": "^7.1.1",
+    "autoprefixer": "^9.8.0",
     "babel-preset-es2015": "^6.24.1",
-    "grunt": "^1.0.1",
-    "grunt-babel": "^6.0.0",
+    "grunt": "^1.1.0",
+    "grunt-babel": "^8.0.0",
     "grunt-banner": "^0.6.0",
     "grunt-browser-sync": "^2.2.0",
-    "grunt-concurrent": "^2.3.1",
-    "grunt-contrib-clean": "^1.1.0",
-    "grunt-contrib-compress": "^1.4.1",
+    "grunt-concurrent": "^3.0.0",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-compress": "^1.6.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-jade": "^1.0.0",
-    "grunt-contrib-jasmine": "^1.1.0",
-    "grunt-contrib-uglify": "^3.0.1",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-jasmine": "^2.2.0",
+    "grunt-contrib-uglify": "^4.0.1",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-notify": "^0.4.5",
-    "grunt-postcss": "^0.8.0",
+    "grunt-postcss": "^0.9.0",
     "grunt-remove-logging": "^0.2.0",
     "grunt-rename-util": "^1.0.0",
-    "grunt-sass": "^2.0.0",
+    "grunt-sass": "^3.1.0",
     "grunt-text-replace": "^0.4.0",
     "husky": "^0.14.3",
     "jasmine": "^2.6.0",
@@ -55,7 +58,7 @@
     "jquery": "^3.2.1",
     "lint-staged": "^7.0.4",
     "node-archiver": "^0.3.0",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.14.1",
     "phantomjs-prebuilt": "^2.1.14",
     "prettier": "^1.12.1"
   },
